# bl602_cmake_mcusdk

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: riscv64-unknown-elf-gcc.cmake
drivers/: Spi.cpp  Spi.h  SpiMaster.cpp  SpiMaster.h
sx126x/: SX126x.cpp  SX126x.hpp
